- More work on the Ultibo CAN/Ethernet Bridge

--- a/Projects/Ultibo/EthernetCanBridge/EthernetCanBridge.lpi
+++ b/Projects/Ultibo/EthernetCanBridge/EthernetCanBridge.lpi
@@ -32,7 +32,7 @@
         <FormatVersion Value="1"/>
       </local>
     </RunParams>
-    <Units Count="2">
+    <Units Count="3">
       <Unit0>
         <Filename Value="EthernetCanBridge.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -43,6 +43,10 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="NodeConnections"/>
       </Unit1>
+      <Unit2>
+        <Filename Value="ftp.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit2>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
