- CAN to Ethernet Bridge working under Ultibo

--- a/Projects/Lazarus/RR-Circuits_Mulit_Node/project_template.lpi
+++ b/Projects/Lazarus/RR-Circuits_Mulit_Node/project_template.lpi
@@ -72,7 +72,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\..\..\Library\Lib"/>
+      <OtherUnitFiles Value="..\..\..\Library\Lib;..\..\..\Library\LCC"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Conditionals Value="if TargetOS = 'darwin' then
