--- a/Projects/Lazarus/NetworkTree/NetworkTree.lpi
+++ b/Projects/Lazarus/NetworkTree/NetworkTree.lpi
@@ -78,8 +78,8 @@
     </SearchPaths>
     <Conditionals Value="if TargetOS = 'darwin' then
 begin
-  CustomOptions += '-k-macosx_version_min -k10.4';
-  CustomOptions += '-XR/Developer/SDKs/MacOSX10.4u.sdk/';
+  CustomOptions += '-k-macosx_version_min -k10.5';
+  CustomOptions += '-XR/Developer/SDKs/MacOSX10.5.sdk/';
   CustomOptions += ' -dUseCThreads';
 end;
 if TargetOS = 'linux' then
