- LccEthernetClient converted to Ultibo (needs work for ethernet errors and recovery)

--- a/Projects/Lazarus/Console Applications/SimpleOlcbNode/SimpleOlcbNode.lpi
+++ b/Projects/Lazarus/Console Applications/SimpleOlcbNode/SimpleOlcbNode.lpi
@@ -49,6 +49,8 @@
       <OtherUnitFiles Value="..\..\..\..\Library\LCC;..\..\..\..\Library\Synapse_LCC;..\..\..\..\Library\Generics\src"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
+    <Conditionals Value="if TargetOS = 'linux' then
+  CustomOptions += ' -dUseCThreads';"/>
     <Other>
       <CustomOptions Value="-dFPC_CONSOLE_APP"/>
       <OtherDefines Count="1">
