Updated all projects to compile (and maybe work) Got the mDNS component working and tested on OSX, Windows and Linux, now we can do the auto discovery of ethernet nodes that Bob had outlined.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ Projects/LazarusRaspberryPi/Gpio_Demo/Compiled_Binaries
 Projects/LazarusRaspberryPi/Gpio_Demo/lib
 Projects/Delphi/Template2/Template_LccLib_Project.groupproj.local
 Projects/Delphi/Template2/Template_LccLib_Project.~dsk
+Projects/Lazarus/WebSocketServer/project1
+Projects/Lazarus/WebSocketServer/project1.exe
+Projects/Lazarus/WebSocketServerGui/WebSocketServe
+Projects/Lazarus/WebSocketServerGui/WebSocketServe.exe
