--- a/Projects/Ultibo/BasicLccNode/BasicLccNode.lpi
+++ b/Projects/Ultibo/BasicLccNode/BasicLccNode.lpi
@@ -36,6 +36,7 @@
       <Unit0>
         <Filename Value="BasicLccNode.lpr"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="SimpleOlcbNode"/>
       </Unit0>
     </Units>
   </ProjectOptions>
