--- a/Projects/Lazarus/BasicCANandEthernetApp/BasicCANandEthernetApp.lpi
+++ b/Projects/Lazarus/BasicCANandEthernetApp/BasicCANandEthernetApp.lpi
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="9"/>
+    <Version Value="10"/>
     <PathDelim Value="\"/>
     <General>
       <SessionStorage Value="InProjectDir"/>
@@ -14,9 +14,6 @@
     <i18n>
       <EnableI18N LFM="False"/>
     </i18n>
-    <VersionInfo>
-      <StringTable ProductVersion=""/>
-    </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
     </BuildModes>
@@ -55,6 +52,7 @@
         <ComponentName Value="Form2"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <UnitName Value="Unit2"/>
       </Unit2>
     </Units>
   </ProjectOptions>
@@ -66,13 +64,10 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\..\..\Library\Lib"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Conditionals Value="if TargetOS = 'darwin' then
 begin
-  CustomOptions += '-k-macosx_version_min -k10.4';
-  CustomOptions += '-XR/Developer/SDKs/MacOSX10.4u.sdk/';
   CustomOptions += ' -dUseCThreads';
 end;
 if TargetOS = 'linux' then
@@ -99,6 +94,12 @@ if TargetOS = 'linux' then
         </Win32>
       </Options>
     </Linking>
+    <Other>
+      <CustomOptions Value="-dPUREPASCAL"/>
+      <OtherDefines Count="1">
+        <Define0 Value="PUREPASCAL"/>
+      </OtherDefines>
+    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
