--- a/Projects/Lazarus/RR-Circuits_UsbCan_Tester/rr_circuits.lpi
+++ b/Projects/Lazarus/RR-Circuits_UsbCan_Tester/rr_circuits.lpi
@@ -81,8 +81,8 @@
     </SearchPaths>
     <Conditionals Value="if TargetOS = 'darwin' then
 begin
-  CustomOptions += '-k-macosx_version_min -k10.4';
-  CustomOptions += '-XR/Developer/SDKs/MacOSX10.4u.sdk/';
+ // CustomOptions += '-k-macosx_version_min -k10.4';
+ // CustomOptions += ' -XR/Developer/SDKs/MacOSX10.4u.sdk/';
   CustomOptions += ' -dUseCThreads';
 end;
 if TargetOS = 'linux' then
