--- a/Projects/Lazarus/Console Applications/SimpleOlcbNode/SimpleOlcbNode.lpi
+++ b/Projects/Lazarus/Console Applications/SimpleOlcbNode/SimpleOlcbNode.lpi
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="10"/>
+    <Version Value="11"/>
     <PathDelim Value="\"/>
     <General>
       <Flags>
@@ -25,8 +25,16 @@
     </PublishOptions>
     <RunParams>
       <local>
-        <FormatVersion Value="1"/>
+        <CommandLineParams Value="-s -C cdi_16_24_PC_default.xml -f piface.xml -t sdn_signaltemplate.xml -d 2048"/>
       </local>
+      <FormatVersion Value="2"/>
+      <Modes Count="1">
+        <Mode0 Name="default">
+          <local>
+            <CommandLineParams Value="-s -C cdi_16_24_PC_default.xml -f piface.xml -t sdn_signaltemplate.xml -d 2048"/>
+          </local>
+        </Mode0>
+      </Modes>
     </RunParams>
     <Units Count="1">
       <Unit0>
