--- a/Projects/Lazarus/Console Applications/LccNode/LccNode.lpi
+++ b/Projects/Lazarus/Console Applications/LccNode/LccNode.lpi
@@ -36,11 +36,20 @@
         </Mode0>
       </Modes>
     </RunParams>
-    <Units Count="1">
+    <Units Count="3">
       <Unit0>
         <Filename Value="LccNode.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
+      <Unit1>
+        <Filename Value="test_test.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit1>
+      <Unit2>
+        <Filename Value="unit1.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="Unit1"/>
+      </Unit2>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
