--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/TestLcc.lpi
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/TestLcc.lpi
@@ -6,7 +6,7 @@
     <General>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
-      <Title Value="LccTest"/>
+      <Title Value="TestLcc"/>
       <Scaled Value="True"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
@@ -30,14 +30,13 @@
     </RequiredPackages>
     <Units Count="2">
       <Unit0>
-        <Filename Value="LccTest.lpr"/>
+        <Filename Value="TestLcc.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
         <Filename Value="unit1.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="Form1"/>
-        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
       </Unit1>
@@ -47,11 +46,11 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="Compiled_Binaries\$(TargetCPU)-$(TargetOS)\LccTest"/>
+      <Filename Value="Compiled_Binaries\$(TargetCPU)-$(TargetOS)\TestLcc"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\Target-PC;..\Target-PC\HardwareConnection;..\Target-PC\Synapse_LCC;..\Target-Common"/>
+      <OtherUnitFiles Value="..\Target-Common;..\Target-PC;..\Target-PC\HardwareConnection;..\Target-PC\Synapse_LCC"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Conditionals Value="if TargetOS = 'darwin' then
