Compiles but the logic fails in SMS... :(

--- a/Projects/Lazarus/WebSocketServerGui/WebSocketServe.lpi
+++ b/Projects/Lazarus/WebSocketServerGui/WebSocketServe.lpi
@@ -62,6 +62,9 @@
 if TargetOS = 'darwin' then
   CustomOptions += ' -dUseCThreads';"/>
     <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf2Set"/>
+      </Debugging>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
