--- a/Projects/Lazarus/WebSocketServerBridge/WebSocketBridge.lpi
+++ b/Projects/Lazarus/WebSocketServerBridge/WebSocketBridge.lpi
@@ -2,14 +2,16 @@
 <CONFIG>
   <ProjectOptions>
     <Version Value="11"/>
-    <PathDelim Value="\"/>
     <General>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
-      <Title Value="TestLcc"/>
+      <Title Value="WebSocketBridge"/>
       <Scaled Value="True"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
+      <XPManifest>
+        <DpiAware Value="True"/>
+      </XPManifest>
       <Icon Value="0"/>
     </General>
     <BuildModes Count="1">
@@ -25,7 +27,7 @@
     </RunParams>
     <RequiredPackages Count="2">
       <Item1>
-        <PackageName Value="SynEdit"/>
+        <PackageName Value="LCC"/>
       </Item1>
       <Item2>
         <PackageName Value="LCL"/>
@@ -33,7 +35,7 @@
     </RequiredPackages>
     <Units Count="2">
       <Unit0>
-        <Filename Value="TestLcc.lpr"/>
+        <Filename Value="WebSocketBridge.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
@@ -48,39 +50,20 @@
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="11"/>
-    <PathDelim Value="\"/>
     <Target>
-      <Filename Value="Compiled_Binaries\$(TargetCPU)-$(TargetOS)\TestLcc"/>
+      <Filename Value="WebSocketBridge"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\Target-Common;..\Target-PC;..\Target-PC\HardwareConnection;..\Target-PC\Synapse_LCC"/>
-      <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
+      <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
-    <Conditionals Value="if TargetOS = 'darwin' then
-begin
-//  CustomOptions += '-k-macosx_version_min -k10.4';
-//  CustomOptions += '-XR/Developer/SDKs/MacOSX10.4u.sdk/';
+    <Conditionals Value="if TargetOS = 'linux' then
   CustomOptions += ' -dUseCThreads';
-end;
-if TargetOS = 'linux' then
-  CustomOptions += ' -dUseCThreads';"/>
-    <BuildMacros>
-      <Count Value="1"/>
-      <Item1>
-        <Identifier Value="MustangpeakCompilerOptions"/>
-        <Description Value="Compiler Options for Platforms"/>
-      </Item1>
-    </BuildMacros>
-    <CodeGeneration>
-      <Optimizations>
-        <OptimizationLevel Value="0"/>
-      </Optimizations>
-    </CodeGeneration>
+if TargetOS = 'darwin' then
+  CustomOptions += ' -dUseCThreads';;"/>
     <Linking>
       <Debugging>
         <DebugInfoType Value="dsDwarf2Set"/>
-        <UseValgrind Value="True"/>
       </Debugging>
       <Options>
         <Win32>
