Created a Ultibo program and a few adjustments compile all the files.  Not tested nor a functioning program but it compiles.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ Projects/Smart Mobile/SMS Throttle/SmartMobileStudio/Throttle/FormThrottle.sfm.b
 Projects/Smart Mobile/SMS Throttle/SmartMobileStudio/Throttle/TabMainForm.bak
 Projects/Smart Mobile/SMS Throttle/SmartMobileStudio/Throttle/TabMainForm.sfm.bak
 Projects/Smart Mobile/SMS Throttle/SmartMobileStudio/Throttle/TabSettingsForm.sfm.bak
+Projects/Smart Mobile/SMS Throttle/Target-Common/lcc_defines.pas.bak
+Projects/Smart Mobile/SMS Throttle/Target-Common/lcc_node.pas.bak
+Projects/Smart Mobile/SMS Throttle/Target-Common/lcc_node_manager.pas.bak
+Projects/Smart Mobile/SMS Throttle/Target-Common/lcc_protocol_datagram.pas.bak
+Projects/Smart Mobile/SMS Throttle/Target-Common/lcc_protocol_memory_configurationdefinitioninfo.pas.bak
+Projects/Smart Mobile/SMS Throttle/Target-Common/lcc_protocol_simplenodeinfo.pas.bak
+Projects/Smart Mobile/SMS Throttle/Target-Common/lcc_utilities.pas.bak
