Compiles and runs successfully in SmartMobile Studio and Lazarus.

--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/TestLcc.lpi
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/TestLcc.lpi
@@ -88,6 +88,11 @@ if TargetOS = 'linux' then
         </Win32>
       </Options>
     </Linking>
+    <Other>
+      <OtherDefines Count="1">
+        <Define0 Value="FPC_CONSOLE_APP"/>
+      </OtherDefines>
+    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
