Created new Lazarus Test for Traction

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ Projects/Smart Mobile/SMS Throttle/Target-Common/lcc_protocol_datagram.pas.bak
 Projects/Smart Mobile/SMS Throttle/Target-Common/lcc_protocol_memory_configurationdefinitioninfo.pas.bak
 Projects/Smart Mobile/SMS Throttle/Target-Common/lcc_protocol_simplenodeinfo.pas.bak
 Projects/Smart Mobile/SMS Throttle/Target-Common/lcc_utilities.pas.bak
+Projects/Smart Mobile/SMS Throttle/Lazarus/TractionTest/Compiled_Binaries
+Projects/Smart Mobile/SMS Throttle/Lazarus/TractionTest/lib
+Projects/Smart Mobile/SMS Throttle/Lazarus/TractionTest/backup
