--- a/Projects/Lazarus/BasicCANandEthernetApp/BasicCANandEthernetApp.lpi
+++ b/Projects/Lazarus/BasicCANandEthernetApp/BasicCANandEthernetApp.lpi
@@ -87,6 +87,7 @@ if TargetOS = 'linux' then
     </CodeGeneration>
     <Linking>
       <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
         <UseValgrind Value="True"/>
       </Debugging>
       <Options>
