Lots of things.  Mainly I added a buffer for incoming messages but commented it out while fixing a mystery crash.... I think it should have the buffer and not wind through the functions through the Synchronize call in the thread.

--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/TrainCommander.lpi
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/TrainCommander.lpi
@@ -77,6 +77,11 @@ if TargetOS = 'linux' then
         <Description Value="Compiler Options for Platforms"/>
       </Item1>
     </BuildMacros>
+    <Parsing>
+      <SyntaxOptions>
+        <IncludeAssertionCode Value="True"/>
+      </SyntaxOptions>
+    </Parsing>
     <CodeGeneration>
       <Checks>
         <IOChecks Value="True"/>
@@ -84,7 +89,6 @@ if TargetOS = 'linux' then
         <OverflowChecks Value="True"/>
         <StackChecks Value="True"/>
       </Checks>
-      <VerifyObjMethodCallValidity Value="True"/>
       <Optimizations>
         <OptimizationLevel Value="0"/>
       </Optimizations>
