Fixed dumb things like not handling GridConnect multi frame messages at all....  We are now connecting a train to the controller and disconnecting!  Needs work to make it work if the user enters something else before this sequence ends.

--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainController/TrainController.lpi
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainController/TrainController.lpi
@@ -31,7 +31,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="2">
+    <Units Count="3">
       <Unit0>
         <Filename Value="TrainController.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -44,6 +44,10 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
       </Unit1>
+      <Unit2>
+        <Filename Value="..\..\Target-Common\lcc_task_manager.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit2>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
