--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/TrainCommander.lpi
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/TrainCommander.lpi
@@ -108,6 +108,7 @@ if TargetOS = 'linux' then
         <OverflowChecks Value="True"/>
         <StackChecks Value="True"/>
       </Checks>
+      <VerifyObjMethodCallValidity Value="True"/>
       <Optimizations>
         <OptimizationLevel Value="0"/>
       </Optimizations>
