Working on the javascript throttle, getting the detailing logging working for the PC version at least.

--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/TrainCommander.lpi
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/TrainCommander.lpi
@@ -31,7 +31,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="8">
+    <Units Count="3">
       <Unit0>
         <Filename Value="TrainCommander.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -49,26 +49,6 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="TrainDatabaseUnit"/>
       </Unit2>
-      <Unit3>
-        <Filename Value="..\..\Target-Common\lcc_tasks.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit3>
-      <Unit4>
-        <Filename Value="..\..\Target-Common\lcc_node_train.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit4>
-      <Unit5>
-        <Filename Value="..\..\Target-Common\lcc_node_controller.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit5>
-      <Unit6>
-        <Filename Value="..\..\Target-Common\lcc_node_commandstation.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit6>
-      <Unit7>
-        <Filename Value="..\..\Target-Common\lcc_node_tasks.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit7>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -79,7 +59,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\..\Target-Common;..\..\Target-PC;..\..\Target-PC\HardwareConnection;..\..\Target-PC\Synapse_LCC"/>
+      <OtherUnitFiles Value="..\..\Target-PC;..\..\Target-PC\HardwareConnection;..\..\Target-Common;..\..\Target-PC\Synapse_LCC"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Conditionals Value="if TargetOS = 'darwin' then
